# database/model/user.go
@@ -10,20 +10,20 @@ import (
 type UserStatus int8
 
 const (
-	UserStatusNormal  UserStatus = 0 // 正常状态
-	UserStatusDisable UserStatus = 1 // 禁用
+	UserStatusNormal  UserStatus = 1 // 正常状态
+	UserStatusDisable UserStatus = 2 // 禁用
 )
 
 // User 用户模型
 type User struct {
 	UUIDModel
-	Username string     `gorm:"size:255;not null" json:"username"`
-	Password string     `gorm:"size:255;not null" json:"-"`
-	Email    string     `gorm:"size:255;not null" json:"email"`
-	Nickname string     `gorm:"size:255;not null" json:"nickname"`
-	Gender   string     `gorm:"size:50;not null" json:"gender"`
-	Avatar   string     `gorm:"size:255;default:''" json:"avatar"`
-	Status   UserStatus `gorm:"default:0;not null" json:"status"` // 0-正常，1-禁用
+	Username string     `gorm:"column:username;size:255;not null" json:"username"`
+	Password string     `gorm:"column:password;size:255;not null" json:"-"`
+	Email    string     `gorm:"column:email;size:255;not null" json:"email"`
+	Nickname string     `gorm:"column:nickname;size:255;not null" json:"nickname"`
+	Gender   string     `gorm:"column:gender;size:50;not null" json:"gender"`
+	Avatar   string     `gorm:"column:avatar;size:255;default:''" json:"avatar"`
+	Status   UserStatus `gorm:"column:status;default:1;not null" json:"status"` // 1-正常，2-禁用
 }
 
 func (User) TableName() string {
